src/objects/E2CP__Case_Comment_Draft__c.object
<CustomObject>
    <fields>
        <fullName>E2CP__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comment Drafts</relationshipLabel>
        <relationshipName>Case_Comment_Drafts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2CP__Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Comment_Drafts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Comment Draft</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Comment Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comment Drafts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>